--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,9 @@
 # Tell Travis CI we're using PHP
 language: php
 
-# Versions of PHP to test against
+# Versions of PHP to test against - PHPCompatibilityWP does linting for earlier versions.
 php:
-  - 5.6
-  - 7.0
-  - 7.1
+  - 7.3
 
 # Specify versions of WordPress to test against
 # WP_VERSION = WordPress version number (use "master" for SVN trunk)
