--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ before_script:
     # prepare for running the tests
     - cd $plugin_dir
     - pwd
+    - composer global require --dev phpunit/phpunit ^6
     - composer install
 
 script:
