Move PHPUnit requirement to composer build.

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {},
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.4.3",
-        "phpcompatibility/phpcompatibility-wp": "*"
+        "phpcompatibility/phpcompatibility-wp": "*",
+        "phpunit/phpunit": "^6"
     }
 }
