--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "*",
-        "phpcompatibility/phpcompatibility-wp": "*"
+        "phpcompatibility/phpcompatibility-wp": "*",
+        "wp-coding-standards/wpcs": "*"
     },
     "config": {
         "allow-plugins": {
