Allow mixed OO in files when sniffing PHPCS.

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -27,6 +27,7 @@
 		<exclude name="PSR2.ControlStructures.SwitchDeclaration.SpaceBeforeColonCASE" />
 		<exclude name="PSR2.ControlStructures.SwitchDeclaration.SpaceBeforeColonDEFAULT" />
 		<exclude name="PSR2.ControlStructures.SwitchDeclaration.BreakIndent" />
+		<exclude name="Universal.Files.SeparateFunctionsFromOO.Mixed" />
 	</rule>
 
 	<rule ref="WordPress.WP.DeprecatedClasses">
