--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -14,6 +14,7 @@
 
 	<!-- Iterate over all PHP files by default -->
 	<file>.</file>
+	<arg name="extensions" value="php"/>
 
 	<!-- Check for PHP cross-version compatibility. -->
 	<config name="testVersion" value="5.6-"/>
