--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -31,6 +31,14 @@
 		<exclude name="Universal.Files.SeparateFunctionsFromOO.Mixed" />
 	</rule>
 
+	<rule ref="WordPress.WP.Capabilities">
+		<properties>
+			<property name="custom_capabilities" type="array">
+				<element value="bp_moderate" />
+			</property>
+		</properties>
+	</rule>
+
 	<rule ref="WordPress.WP.DeprecatedClasses">
 		<properties>
 			<property name="minimum_supported_version" value="3.2"/>
